{
    "name": "RtsInputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "221bbe9d-16c6-4179-8de1-2d64ffd19374",
            "actions": [
                {
                    "name": "SelectLocation",
                    "type": "Button",
                    "id": "5b7c8b29-6999-4294-b4c6-faa6fbeed5fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectUnit1",
                    "type": "Button",
                    "id": "044cc01c-38c2-4aa4-ac7e-9046433a0102",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectUnit2",
                    "type": "Button",
                    "id": "5aee15ec-798e-49b2-8f12-8417a3da2986",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectUnit3",
                    "type": "Button",
                    "id": "b99ad3c3-9494-4794-9470-3b1c707e0e52",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectUnit4",
                    "type": "Button",
                    "id": "d7abf95e-b9e2-4aaa-817a-70f4238287a0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectUnit5",
                    "type": "Button",
                    "id": "c90860ed-1d31-4422-a1ac-2ff9485efa91",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectAllUnits",
                    "type": "Button",
                    "id": "fe11d217-361a-4a11-a238-8b12762d5d3f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "02325f5a-d6c2-4007-a94a-57835aee5081",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectLocation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6e8c532-4aae-4796-9873-676c73438f52",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectUnit1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da6a11fe-9145-4f0c-935c-d932e8af910c",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectUnit2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4c5a9cf-4f75-4c6c-9e3c-75126e5e0e58",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectUnit3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "432b06cf-e0b1-42cd-8035-3378080a2e20",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectUnit4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c0dc5c7-12dc-4b8e-ae79-f478b6321157",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectUnit5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b6c3909-b347-4b7f-86cf-e9b4951c3bd1",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectAllUnits",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}